Fix hero responsive font sizes and spacing across breakpoints

--- a/css/style.css
+++ b/css/style.css
@@ -1501,6 +1501,16 @@ body.is-sub-page .mobile-toggle span {
         padding-left: 50px;
         padding-right: 50px;
     }
+
+    .slogan-container {
+        height: 180px;
+    }
+    .slogan-title {
+        font-size: 68px;
+    }
+    .desc-container {
+        margin-bottom: 140px;
+    }
 }
 
 @media screen and (max-width: 1200px) {
@@ -1529,6 +1539,16 @@ body.is-sub-page .mobile-toggle span {
 
     .tech-new-list {
         display: none;
+    }
+
+    .slogan-container {
+        height: 155px;
+    }
+    .slogan-title {
+        font-size: 56px;
+    }
+    .desc-container {
+        margin-bottom: 100px;
     }
 }
 
@@ -1594,13 +1614,22 @@ body.is-sub-page .mobile-toggle span {
         transform: none;
     }
 
+    .slogan-container {
+        height: auto;
+        margin-bottom: 24px;
+    }
+    .desc-container {
+        height: auto;
+        margin-bottom: 60px;
+    }
+
     .slogan-title.active {
-        font-size: 28px;
+        font-size: 38px;
         line-height: 1.3;
     }
 
     .slogan-desc.active {
-        font-size: 15px;
+        font-size: 16px;
         line-height: 1.5;
         margin-top: 15px;
         color: rgba(255, 255, 255, 0.7);
@@ -1652,11 +1681,14 @@ body.is-sub-page .mobile-toggle span {
     }
 
     .slogan-title.active {
-        font-size: 28px;
+        font-size: 36px;
     }
 }
 
 @media screen and (max-width: 480px) {
+    .slogan-title.active {
+        font-size: 30px;
+    }
     .tech-new-card {
         flex: 0 0 260px;
         height: 360px;
